# ncaars

./: .gitignore  .readthedocs.yml  README.rst  main.nf  pyproject.toml
.github/workflows/: test_and_release.yml
conda/: rdkit_prody.yml  rdkit_prody_pyrosetta.yml  test.yml
contrib/: wget_frags.sh
demo/: nextflow.config
docker/: Makefile
docker/molfile_to_params/: Dockerfile  clone_rosetta.sh
docker/rdkit_prody_pyrosetta/: Dockerfile  environment.yml
docs/: Makefile  basic_usage.rst  conf.py
dry_run/: main.sh  nextflow.config  resfile
scaffolds/mja_tyrrs/: 1j1u.fasta  1j1u.pssm  README.md  config.nt  resfile
scaffolds/mja_tyrrs/frags/: 1j1uA.check  1j1uA.checkpoint  1j1uA.fasta  1j1uA.jufo_ss  1j1uA.psipred  1j1uA.psipred_ss2  1j1uA.rdb
scaffolds/mja_tyrrs_p158/: 1zh0.fasta  1zh0.pssm  README.rst  config.nt  resfile
scaffolds/mja_tyrrs_p158/frags/: 1zh0A.check  1zh0A.checkpoint  1zh0A.fasta  1zh0A.jufo_ss  1zh0A.psipred  1zh0A.psipred_ss2  1zh0A.rdb
scaffolds/mma_pylrs/: 2zim.fasta  2zim.pssm  README.md  config.nt  resfile
scaffolds/mma_pylrs/frags/: 2zimA.check  2zimA.checkpoint  2zimA.fasta  2zimA.jufo_ss  2zimA.psipred  2zimA.psipred_ss2  2zimA.rdb
