[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "ncaars"
author = "Kale Kundert"
author-email = "kale@thekunderts.net"
home-page = 'https://github.com/kalekundert/ncaars'
description-file = 'README.rst'
requires-python = "~=3.9"
requires = [
]
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]

[tool.flit.metadata.requires-extra]
test = [
  'pytest',
  'pytest-cov',
  'parametrize_from_file',
  'coveralls',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]
[tool.flit.scripts]
ncaars = "ncaars:main"
[tool.flit.metadata.urls]
'Documentation' = 'https://ncaars.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/ncaars'
'Bug Tracker' = 'https://github.com/kalekundert/ncaars/issues'
'Continuous Integration' = 'https://github.com/kalekundert/ncaars/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/ncaars'

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]
ignore_generated_commits = true
generated_commits = ['^Merge']

[tool.semantic_release]
version_variable = 'ncaars/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
major_on_zero = false
